--- a/puzzlegen/examples/basic_usage.ipynb
+++ b/puzzlegen/examples/basic_usage.ipynb
@@ -6,20 +6,8 @@
         "id": "3OML9-oCNHQY"
       },
       "source": [
-        "Puzzle generation code for the Executive Functioning Task (https://osf.io/3pz74/wiki/home/)\n",
-        "\n",
+        "# Puzzle Generation Code for the Executive Functioning Task (https://osf.io/3pz74/wiki/home/)\n",
         "Developed by Caroline DAKOURE"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "eKhivWPkZ5g-"
-      },
-      "source": [
-        "# ----------------------------------------------------------\n",
-        "# Executive Functioning Task - Puzzle Rules (for reference: https://osf.io/3pz74/wiki/home/)\n",
-        "# ----------------------------------------------------------"
       ]
     },
     {
@@ -28,7 +16,7 @@
         "id": "u4iAFjjkXOor"
       },
       "source": [
-        "# Randomly generate 1 puzzle and test its solvability within a specified number of moves (e.g, 5 moves maximum)."
+        "## Randomly generate 1 puzzle and test its solvability within a specified number of moves (e.g, 5 moves maximum)."
       ]
     },
     {
@@ -64,7 +52,7 @@
         "id": "QFA40OWNAnIW"
       },
       "source": [
-        "# Generate a batch of puzzles solvable in 5 moves maximum"
+        "## Generate a batch of puzzles solvable in 5 moves maximum"
       ]
     },
     {
@@ -101,20 +89,6 @@
         "batch.show_stats()\n",
         "batch.save_pdf(\"batch_puzzles.pdf\")\n",
         "batch.save_csv(\"batch_puzzles.csv\")\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7XIM5MooaEdt"
-      },
-      "source": [
-        "Resources:\n",
-        "https://medium.com/swlh/solving-simplified-candy-crush-i-e-match-3-games-with-swaps-54cb7975486b\n",
-        "https://github.com/MohamadTarekk/EightPuzzle\n",
-        "https://www.youtube.com/watch?v=MQ-BffUgYfM\n",
-        "https://visualgo.net/en/dfsbfs\n",
-        "https://dev.to/lukegarrigan/what-is-bfs-breadth-first-search-nad"
       ]
     }
   ],
