--- a/examples/basic_usage.ipynb
+++ b/examples/basic_usage.ipynb
@@ -168,7 +168,7 @@
         "    colors_blocks=['blue', 'red', 'gray'],\n",
         "    nb_moves=5,\n",
         "    grid_size=(12, 6),\n",
-        "    nb_attempts=3\n",
+        "    nb_attempts=3,\n",
         "    stack_probability=0.75\n",
         ")\n",
         "\n",
