--- a/examples/basic_usage.ipynb
+++ b/examples/basic_usage.ipynb
@@ -117,19 +117,19 @@
       "source": [
         "from puzzlegen.frontend import SinglePuzzle\n",
         "\n",
-        "# 1. Instantiate a single puzzle\n",
+        "# 1. Create a single puzzle with defined parameters\n",
         "puzzle = SinglePuzzle(nb_blocks=10, colors=['red', 'blue', 'gray'], nb_moves=5, grid_size=(12, 12))\n",
         "\n",
-        "# 2. Generate the puzzle grid randomly\n",
+        "# 2. Randomly populate the puzzle board with blocks\n",
         "puzzle.generate()\n",
         "\n",
-        "# 3. Display the puzzle\n",
+        "# 3. Visualize the puzzle\n",
         "puzzle.show()\n",
         "\n",
-        "# 4. Attempt to solve the puzzle (i.e., find a solution within nb_moves)\n",
+        "# 4. Try to solve the puzzle (within the allowed number of moves)\n",
         "solution = puzzle.solve()\n",
         "\n",
-        "# 5. Save the solution and batch as files\n",
+        "# 5. Visualize the solution (if found)\n",
         "puzzle.show_solution()"
       ]
     },
@@ -161,7 +161,7 @@
       "source": [
         "from puzzlegen.frontend import PuzzleBatch\n",
         "\n",
-        "# 1. Instantiate a batch of puzzles\n",
+        "# 1. Set up a batch generator with parameter ranges\n",
         "batch = PuzzleBatch(\n",
         "    blocks_range=(6, 10),\n",
         "    colors_range=(2, 4),\n",
@@ -172,10 +172,10 @@
         "    stack_probability=0.75\n",
         ")\n",
         "\n",
-        "# 2. Generate the batch\n",
+        "# 2. Attempt to generate solvable puzzles for all combinations within the given ranges\n",
         "batch.generate()\n",
         "\n",
-        "# 3. Show statistics and save the results\n",
+        "# 3. Show stats and save the results\n",
         "batch.show_stats()\n",
         "batch.save_pdf(\"batch_puzzles.pdf\")\n",
         "batch.save_csv(\"batch_puzzles.csv\")"
